--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		                                    детальніше <i class="fa fa-arrow-circle-down "></i>
 		                                </p>
 		                            </a>
-		                            <div class="accordion-content" style="position: relative; z-index: 100" data-tab-content>
+		                            <div class="accordion-content white-bg" style="position: relative; z-index: 100" data-tab-content>
 		                                <h5 class="text-center swim-2 uppercase s-bold">В ціну включено:</h5>
 		                                <ol>
 		                                    <li class="swim-1 include-list" ng-repeat="x in prog.include">{[{ x }]}</li>
@@ -136,7 +136,15 @@
 		                </div>
 		            </div>
 		        </div>
-		        <br><br>    <div class="section white-bg ">
+		        <div class="grid-x align-middle">
+		         	<div class="cell medium-7 large-9">
+		         		<h1 class="text-center white uppercase">Подарунковий <span class="bold">сертифікат <br> 11 000</span> <small class="white">грн</small></h1>
+		         	</div>
+		         	<div class="cell medium-5 large-3">
+		         		<img style="" src="assets/img/cert_S.png" alt="">
+		         	</div>
+		         </div> <br><br>
+		    <div class="section white-bg ">
 		        
 		        	<h1 class="text-center swim-1 uppercase">наші <span class="bold swim-2">партнери</span></h1>
 		        	<div id="partners" class="owl-carousel owl-theme gallery-logos">
