programm content update, color logos

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		                        <img class="" src="assets/img/programs/{[{prog.ID}]}.png" alt="">
 		                    </div>
 		                    <div class="cell prog-features ">
-		                        <h6 class="text-center"><span class="s-bold uppercase">мета: </span>{[{prog.goal}]}</h6>
+		                        <h6 class="text-center uppercase">дистанція: <span class="s-bold ">{[{prog.distance}]}</span></h6>
 		                        <div class=" text-center" style="padding: 0.8rem 0">початок: <span class=" s-bold"> {[{prog.start}]}</span> |
 		                            заплив: <span class=" s-bold"> {[{prog.final}]}</span>
 		                        </div>
