--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 		            <img class="owl-lazy" style="width: auto; " src="assets/img/gallery/swim/10.jpg">
 		            <img class="owl-lazy" style="width: auto; " src="assets/img/gallery/swim/11.jpg">
 		            <img class="owl-lazy" style="width: auto; " src="assets/img/gallery/swim/12.jpg">
+		            <img class="owl-lazy" style="width: auto; " src="assets/img/gallery/swim/13.jpg">
+		            <img class="owl-lazy" style="width: auto; " src="assets/img/gallery/swim/14.jpg">
+		            <img class="owl-lazy" style="width: auto; " src="assets/img/gallery/swim/15.jpg">
 		        </div><br><br>
 		    </div>
 		        <br>
@@ -123,12 +126,10 @@
 		                                </ul>
 		                                <br>
 		                                <div class="text-center">
-		                                    <h4 class="swim-2 s-bold">безкоштовне пробне тренування</h4>
-		                                    <button class="button large white text-center uppercase s-bold swim-bg">
-		                                        <a class="white" href="mailto:mykyta.ubyivovk@gmail.com" target="_blank">
-		                                            записатись
-		                                        </a>
-		                                    </button>
+		                                    <h4 class="swim-2 s-bold">хочу на безкоштовне пробне тренування:</h4>
+		                                   
+		                                        <a class="button  large " href="mailto:mykyta.ubyivovk@gmail.com" style="margin-right: 0.8rem" target="_blank"> <i class="fa fa-paper-plane "></i></a>
+		                                        <a class="button large " href="tel://+380636782132" target="_blank"><i class="fa fa-phone "></i> 063 678-21-32</a>
 		                                </div>
 		                            </div>
 		                        </div>
@@ -138,7 +139,7 @@
 		        </div>
 		        <div class="grid-x align-middle">
 		         	<div class="cell medium-7 large-9">
-		         		<h1 class="text-center white uppercase">Подарунковий <span class="bold">сертифікат <br> 11 000</span> <small class="white">грн</small></h1>
+		         		<h1 class="text-center white uppercase">Подарункові <span class="bold">сертифікати  <br>від 1000</span> <small class="white">грн</small></h1>
 		         	</div>
 		         	<div class="cell medium-5 large-3">
 		         		<img style="" src="assets/img/cert_S.png" alt="">
