added kyiv page draft

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swim4U | set your goal & swim it</title>
+    <title>Swim 4U | set your goal &amp; swim it</title>
+    <!-- <title>Swim4U | set your goal & swim it</title> -->
     <meta property="og:title" content="Swim 4U | set your goal & swim it" />
     <meta property="og:description" content="Ми спортсмени-аматори, подорожуємо по світу, долаючи кілометри біжучи, пливучи та крутячи педалі. " />
     <meta property="og:image" content="https://shuandr.github.io/Swim4U/og-image-swim.jpg">
@@ -44,6 +45,8 @@
             	<i class="fa fa-facebook-square fa-2x"></i></a>
             	<a href="https://www.instagram.com/swim4u_" target="_blank">
             	<i class="fa fa-instagram fa-2x"></i></a>
+            		<a href="swim-kyiv.html" class=" button small white-bg swim-1 s-bold">Swim4U Київ</a>
+            
             	
             </div>        <div class="sport-type">
                 <div class="sport-type-logo text-center">
