--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swim 4U | set your goal &amp; swim it</title>
     <!-- <title>Swim4U | set your goal & swim it</title> -->
-    <meta property="og:title" content="Swim 4U | set your goal & swim it" />
+    <meta property="og:title" content="Swim 4U | set your goal &amp; swim it" />
     <meta property="og:description" content="Ми спортсмени-аматори, подорожуємо по світу, долаючи кілометри біжучи, пливучи та крутячи педалі. " />
-    <meta property="og:image" content="https://shuandr.github.io/Swim4U/og-image-swim.jpg">
+    <meta property="og:image" content="https://shuandr.github.io/Swim4U/OG_img-swim.jpg">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://shuandr.github.io/Swim4U/" />
+    <meta property="og:url" content="https://shuandr.github.io/Swim4U/index.html" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/app.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
