--- a/run.html
+++ b/run.html
@@ -17,11 +17,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run 4U | set your goal &amp; run it</title>
     <!-- <title>Swim4U | set your goal & swim it</title> -->
-    <meta property="og:title" content="Swim 4U | set your goal & swim it" />
+    <meta property="og:title" content="Run 4U | set your goal &amp; run it" />
     <meta property="og:description" content="Ми спортсмени-аматори, подорожуємо по світу, долаючи кілометри біжучи, пливучи та крутячи педалі. " />
-    <meta property="og:image" content="https://shuandr.github.io/Swim4U/og-image-swim.jpg">
+    <meta property="og:image" content="https://shuandr.github.io/Swim4U/OG_img-run.jpg">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://shuandr.github.io/Swim4U/" />
+    <meta property="og:url" content="https://shuandr.github.io/Swim4U/run.html" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/app.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
@@ -41,9 +41,9 @@
             <div class="social-icons">
             	<!-- <a href="https://www.facebook.com/Run4Uclub" target="_blank">
             	<i class="fa fa-facebook-square fa-2x"></i></a> -->
-            	<a href="https://www.facebook.com/SwimForU" target="_blank">
+            	<a href="https://www.facebook.com/Run4Uclub" target="_blank">
             	<i class="fa fa-facebook-square fa-2x"></i></a>
-            	<a href="https://www.instagram.com/swim4u_" target="_blank">
+            	<a href="https://www.instagram.com/run4uclub" target="_blank">
             	<i class="fa fa-instagram fa-2x"></i></a>
             	
             </div>        <div class="sport-type">
