--- a/swim-kyiv.html
+++ b/swim-kyiv.html
@@ -52,7 +52,7 @@
             </div>
             <div class="grid-x ">
                 <div class="cell text-center ">
-                    <img class="logo" src="assets/img/swim-4U_logo.svg" alt="">
+                    <img class="logo main" src="assets/img/swim-4U_logo.svg" alt="">
                 </div>
             </div>
             <div class="hero-img">
