--- a/swim-kyiv.html
+++ b/swim-kyiv.html
@@ -136,19 +136,18 @@
                             <div class="accordion-content white-bg" style="position: relative; z-index: 100" data-tab-content>
                                 <h5 class="text-center swim-2 uppercase s-bold">В ціну включено:</h5>
                                 <ol>
-                                    <li class="swim-1 include-list" ng-repeat="x in prog.include">{[{ x }]}</li>
-                                </ol>
+                                    <li class="swim-1 include-list" ng-repeat="x in programs.swimInclude">{[{ x }]}</li>
+                                </ol><br>
                                 <h5 class="text-center swim-2 uppercase s-bold">Тренування:</h5>
-                                <p class="big swim-2">Аквапарк «ПЛЯЖ», <span class="s-bold">7:00 | 8:00 | 9:00</span>  ранку <br><span class="s-bold"> ПН | СР | ПТ</span> або <span class="s-bold">ВТ | ЧТ | СБ</span> на вибір</p><br>
-                                <ul>
-                                    <li class="swim-1 include-list" ng-repeat="x in prog.descr">{[{ x }]}</li>
-                                </ul>
+                                <p class="big swim-2">м. Хрещатик, <span class="s-bold">ПН | ЧТ — 7:00 </span>
+                                    <br>або м. Дружби Народів <span class="s-bold">ПН | ЧТ — 20:30  </span> на вибір</p><br>
+                                
                                 <br>
                                 <div class="text-center">
                                     <h4 class="swim-2 s-bold">хочу на безкоштовне пробне тренування:</h4>
                                    
-                                        <a class="button  large " href="mailto:swim4u.kyiv@gmail.com" style="margin-right: 0.8rem" target="_blank"> <i class="fa fa-paper-plane "></i></a>
-                                        <a class="button large " href="tel://+380630636710994" target="_blank"><i class="fa fa-phone "></i> 063-671-09-94</a>
+                                        <a class="button  large " href="mailto:swim4u.kyiv@gmail.com" style="margin-right: 0.8rem" target="_blank"> <i class="fa fa-envelope "></i></a>
+                                        <a class="button large " href="tel://+380636710994" target="_blank"><i class="fa fa-phone "></i> 063-671-09-94</a>
                                 </div>
                             </div>
                         </div>
@@ -214,11 +213,11 @@
             <div class="grid-x  text-center">
                 <div class="cell ">
                     <div class="social-icons">
-                        <a class="" href="https://www.facebook.com/SwimForU" target="_blank">
+                        <a class="" href="https://www.facebook.com/SwimForUKyiv" target="_blank">
                             <i class="fa fa-facebook-square fa-2x"></i></a>
                         <a class="" href="https://www.instagram.com/swim4u_" target="_blank">
                             <i class="fa fa-instagram fa-2x"></i></a>
-                        <a class="white main-tel" href="tel://+380636782132"> 063-678-21-32</a>
+                        <a class="white main-tel" href="tel://+380636710994"> 063-671-09-94</a>
                     </div>
                 </div>
             </div><br>
