--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
             <div class="grid-container">
                 <div class="grid-x align-middle" style="min-height: 36vh">
                     <div class="cell medium-8 ">
-                        <a href="run.html">
+                        <a href="http://run4u.club/index.html">
                             <h1 class="text-center white bold uppercase">А ще ми бігаємо</h1>
                         </a>
                     </div>
                     <div class="cell medium-auto">
-                        <a href="run.html">
+                        <a href="http://run4u.club/index.html">
                             <div class=" text-center">
                                 <img class="logo"  src="assets/img/run-4U_logo.svg" alt="">
                             </div>
