try to fix accordeon-equalizer bug, rename Kyiv page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <i class="fa fa-facebook-square fa-2x"></i></a>
                     <a href="https://www.instagram.com/swim4u_" target="_blank">
                         <i class="fa fa-instagram fa-2x"></i></a>
-                    <a href="swim-kyiv.html" class=" button small white-bg swim-1 s-bold" style="margin-bottom: 0.4rem">Swim4U Київ</a>
+                    <a href="kyiv.html" class=" button small white-bg swim-1 s-bold" style="margin-bottom: 0.4rem">Swim4U Київ</a>
                 </div>
                 <div class="cell medium-shrink main-tel text-right">
                     <a class="white" href="tel://+380636782132"><i class="fa fa-phone-square fa-2x" style="transform: translateY(0.4rem); "></i> 063-678-21-32</a>
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="cell align-self-bottom accordion" data-accordion data-allow-all-closed="true">
+                    <div class="cell align-self-bottom accordion" data-accordion data-allow-all-closed="true" data-deep-link="true">
                         <div class="  accordion-item" data-accordion-item>
                             <a href="">
                                 <p class="text-center accordion-title " >
@@ -242,12 +242,11 @@
             </div><br>
             <p class="text-center">© Всі права застережено. 2020</p><br>
         </footer></div>
-    <script src="assets/js/app.js"></script>
-    <!-- <script src="assets/js_plugins/fullpage.min.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-route.js"></script>
     <script src="assets/js_plugins/myAngular.js"></script>
+    <script src="assets/js/app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.js"></script>
     <script src="assets/js_plugins/owl.carousel.min.js"></script>
     <script src="assets/js_plugins/readmore.min.js"></script>
 </body>
