--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <div class="hero">
             <div class="grid-x social-icons">
                 <div class="cell medium-auto ">
-                    <a href="https://www.facebook.com/SwimForU" target="_blank">
+                    <a href="https://www.facebook.com/{[{data.fb}]}" target="_blank">
                         <i class="fa fa-facebook-square fa-2x"></i></a>
-                    <a href="https://www.instagram.com/swim4u_" target="_blank">
+                    <a href="https://www.instagram.com/{[{data.insta}]}" target="_blank">
                         <i class="fa fa-instagram fa-2x"></i></a>
                     <a href="kyiv.html" class=" button small white-bg swim-1 s-bold" style="margin-bottom: 0.4rem">Swim4U Київ</a>
                 </div>
                 <div class="cell medium-shrink main-tel text-right">
-                    <a class="white" href="tel://+380636782132"><i class="fa fa-phone-square fa-2x" style="transform: translateY(0.4rem); "></i> 063-678-21-32</a>
+                    <a class="white" href="tel://{[{data.tel}]}"><i class="fa fa-phone-square fa-2x" style="transform: translateY(0.4rem); "></i> {[{data.telView}]}</a>
                 </div>
             </div>
             <div class="grid-x ">
@@ -66,7 +66,7 @@
         	<br><h1 class="text-center white uppercase">наші <span class="bold ">переваги</span></h1><br>
         	<div class="grid-container">
         		<div class="grid-x  grid-padding-x small-up-1 medium-up-2 large-up-3" data-equalizer  data-equalize-on="medium">
-        			<div class="cell" ng-repeat="adv in swimAdvants">
+        			<div class="cell" ng-repeat="adv in data.advants">
         				<div class="card white-bg" data-equalizer-watch>
         					<div class="grid-x">
         						<div class="cell shrink adv-picto">
@@ -107,12 +107,12 @@
         <br>
         <h1 class="text-center white uppercase">наші <span class="bold">програми</span></h1><br>
         <div class="grid-x  grid-padding-x grid-padding-y small-up-1 medium-up-2 large-up-3" data-equalizer data-equalize-on="medium" data-equalize-by-row="true">
-            <div class="cell " ng-repeat="prog in programs.swim" data-equalizer-watch>
+            <div class="cell " ng-repeat="prog in data.programs" data-equalizer-watch>
                 <div class="grid-x dark-024-bgrd" style="height: 100%">
                     <div class="cell">
                         <br>
                         <h4 class="text-center white bold uppercase">{[{prog.name}]}</h4>
-                        <img class="" src="assets/img/programs/{[{prog.ID}]}.png" alt="">
+                        <img src="assets/img/programs/{[{prog.ID}]}.png" loading="lazy">
                     </div>
                     <div class="cell prog-features ">
                         <h6 class="text-center uppercase">дистанція: <span class="s-bold ">{[{prog.distance}]}</span></h6>
@@ -127,36 +127,39 @@
                         </div>
                     </div>
                     <div class="cell align-self-bottom accordion" data-accordion data-allow-all-closed="true" data-deep-link="true">
-                        <div class="  accordion-item" data-accordion-item>
+                        <div class="  accordion-item" style="position: relative;" data-accordion-item>
                             <a href="">
-                                <p class="text-center accordion-title " >
+                                <p class="text-center accordion-title ">
                                     детальніше <i class="fa fa-arrow-circle-down "></i>
                                 </p>
                             </a>
-                            <div class="accordion-content white-bg" style="position: relative; z-index: 100" data-tab-content>
+                            <div class="accordion-content white-bg" style="position: absolute; z-index: 100" data-tab-content>
                                 <h5 class="text-center swim-2 uppercase s-bold">В ціну включено:</h5>
                                 <ol>
                                     <li class="swim-1 include-list" ng-repeat="x in prog.include">{[{ x }]}</li>
-                                </ol>
-                                <h5 class="text-center swim-2 uppercase s-bold">Тренування:</h5>
-                                <p class="big swim-2">Аквапарк «ПЛЯЖ», <span class="s-bold">7:00 | 8:00 | 9:00</span>  ранку <br><span class="s-bold"> ПН | СР | ПТ</span> або <span class="s-bold">ВТ | ЧТ | СБ</span> на вибір</p><br>
+                                </ol><br>
+                                <h6 class="text-center swim-2 uppercase s-bold">Тренування:</h6>
+                                <p class=" swim-2">
+                                    {[{data.trainPlace}]},
+                                    <span class="s-bold">{[{data.trainTime}]}</span> ранку
+                                    <br><span class="s-bold">{[{data.trainDays1}]}</span>
+                                    або <span class="s-bold">{[{data.trainDays2}]}</span> на вибір</p>
+                                <br>
                                 <ul>
                                     <li class="swim-1 include-list" ng-repeat="x in prog.descr">{[{ x }]}</li>
                                 </ul>
                                 <br>
                                 <div class="text-center">
-                                    <h4 class="swim-2 s-bold">хочу на безкоштовне пробне тренування:</h4>
-                                   
-                                        <a class="button  large " href="mailto:mykyta.ubyivovk@gmail.com" style="margin-right: 0.8rem" target="_blank"> <i class="fa fa-paper-plane "></i></a>
-                                        <a class="button large " href="tel://+380636782132" target="_blank"><i class="fa fa-phone "></i> 063 678-21-32</a>
+                                    <h5 class="swim-2 s-bold">хочу на безкоштовне пробне тренування:</h5>
+                                    <a class="button  large " href="mailto:{[{data.mail}]}" style="margin-right: 0.8rem" target="_blank"> <i class="fa fa-envelope "></i></a>
+                                    <a class="button large " href="tel://{[{data.tel}]}" target="_blank"><i class="fa fa-phone "></i> {[{data.telView}]}</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="grid-x align-middle">
+        </div>    <div class="grid-x align-middle">
             <div class="cell medium-7 large-9">
                 <h1 class="text-center white uppercase">Подарункові <span class="bold">сертифікати <br>від 1000</span> <small class="white">грн</small></h1>
             </div>
@@ -185,7 +188,7 @@
                 <h1 class="text-center white uppercase">відгуки <span class="bold">учасників</span></h1><br>
                 <!-- <div class="grid-x  grid-padding-x small-up-1 large-up-2" data-equalizer data-equalize-on="large" data-equalize-by-row="true"> -->
                 <div class="grid-x  grid-padding-x small-up-1 large-up-2">
-                    <div class="cell" ng-repeat="quote in feedbacks">
+                    <div class="cell" ng-repeat="quote in data.feedbacks">
                         <!-- <div class="card white-bg" data-equalizer-watch> -->
                         <div class="card white-bg">
                             <div class="grid-x">
@@ -244,7 +247,7 @@
         </footer></div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-route.js"></script>
-    <script src="assets/js_plugins/myAngular.js"></script>
+    <script src="assets/js_plugins/myAngularS.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.js"></script>
     <script src="assets/js_plugins/owl.carousel.min.js"></script>
