--- a/kyiv.html
+++ b/kyiv.html
@@ -21,7 +21,7 @@
     <meta property="og:description" content="Ми спортсмени-аматори, подорожуємо по світу, долаючи кілометри біжучи, пливучи та крутячи педалі. " />
     <meta property="og:image" content="https://shuandr.github.io/Swim4U/OG_img-swim.jpg">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://shuandr.github.io/Swim4U/swim-kyiv.html" />
+    <meta property="og:url" content="https://shuandr.github.io/Swim4U/kyiv.html" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/app.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
@@ -66,7 +66,7 @@
         	<br><h1 class="text-center white uppercase">наші <span class="bold ">переваги</span></h1><br>
         	<div class="grid-container">
         		<div class="grid-x  grid-padding-x small-up-1 medium-up-2 large-up-3" data-equalizer  data-equalize-on="medium">
-        			<div class="cell" ng-repeat="adv in swimAdvants">
+        			<div class="cell" ng-repeat="adv in data.advants">
         				<div class="card white-bg" data-equalizer-watch>
         					<div class="grid-x">
         						<div class="cell shrink adv-picto">
@@ -107,12 +107,12 @@
         <br>
         <h1 class="text-center white uppercase">наші <span class="bold">програми</span></h1><br>
         <div class="grid-x  grid-padding-x grid-padding-y small-up-1 medium-up-2 large-up-3" data-equalizer data-equalize-on="medium" data-equalize-by-row="true">
-            <div class="cell " ng-repeat="prog in programs.swimKyiv" data-equalizer-watch>
+            <div class="cell " ng-repeat="prog in data.programs" data-equalizer-watch>
                 <div class="grid-x dark-024-bgrd" style="height: 100%">
                     <div class="cell">
                         <br>
                         <h4 class="text-center white bold uppercase">{[{prog.name}]}</h4>
-                        <img class="" src="assets/img/programs/{[{prog.ID}]}.png" alt="">
+                        <img class="" src="assets/img/programs/{[{prog.ID}]}.png" loading="lazy" alt="">
                     </div>
                     <div class="cell prog-features ">
                         <h6 class="text-center uppercase">дистанція: <span class="s-bold ">{[{prog.distance}]}</span></h6>
@@ -127,35 +127,35 @@
                         </div>
                     </div>
                     <div class="cell align-self-bottom accordion" data-accordion data-allow-all-closed="true">
-                        <div class="  accordion-item" data-accordion-item>
+                        <div class="  accordion-item" style="position: relative;" data-accordion-item>
                             <a href="">
                                 <p class="white text-center accordion-title">
                                     детальніше <i class="fa fa-arrow-circle-down "></i>
                                 </p>
                             </a>
-                            <div class="accordion-content white-bg" style="position: relative; z-index: 100" data-tab-content>
+                            <div class="accordion-content white-bg" style="position: absolute; z-index: 100" data-tab-content>
                                 <h5 class="text-center swim-2 uppercase s-bold">В ціну включено:</h5>
                                 <ol>
-                                    <li class="swim-1 include-list" ng-repeat="x in programs.swimInclude">{[{ x }]}</li>
+                                    <li class="swim-1 include-list" ng-repeat="x in data.include">{[{ x }]}</li>
                                 </ol><br>
-                                <h5 class="text-center swim-2 uppercase s-bold">Тренування:</h5>
-                                <p class="big swim-2">м. Хрещатик, <span class="s-bold">ПН | ЧТ — 7:00 </span>
-                                    <br>або м. Дружби Народів <span class="s-bold">ПН | ЧТ — 20:30  </span> на вибір</p><br>
-                                
+                                <h6 class="text-center swim-2 uppercase s-bold">Тренування:</h6>
+                                <p class="swim-2">{[{data.trainPlace}]},
+                                    <span class="s-bold">{[{data.trainDays}]} — {[{data.trainTime}]} </span> або
+                                    <br>{[{data.trainPlace2}]},
+                                    <span class="s-bold">{[{data.trainDays}]} — {[{data.trainTime2}]} </span>
+                                    </p>
                                 <br>
                                 <div class="text-center">
-                                    <h4 class="swim-2 s-bold">хочу на безкоштовне пробне тренування:</h4>
-                                   
-                                        <a class="button  large " href="mailto:swim4u.kyiv@gmail.com" style="margin-right: 0.8rem" target="_blank"> <i class="fa fa-envelope "></i></a>
-                                        <a class="button large " href="tel://+380636710994" target="_blank"><i class="fa fa-phone "></i> 063-671-09-94</a>
+                                    <h5 class="swim-2 s-bold">хочу на безкоштовне пробне тренування:</h5>
+                                    <a class="button  large " href="mailto:{[{data.mail}]}" style="margin-right: 0.8rem" target="_blank"> <i class="fa fa-envelope "></i></a>
+                                    <a class="button large " href="tel://{[{data.tel}]}" target="_blank"><i class="fa fa-phone "></i> {[{data.telView}]}</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="grid-x align-middle">
+        </div>    <div class="grid-x align-middle">
             <div class="cell medium-7 large-9">
                 <h1 class="text-center white uppercase">Подарункові <span class="bold">сертифікати <br>від 1000</span> <small class="white">грн</small></h1>
             </div>
@@ -184,7 +184,7 @@
                 <h1 class="text-center white uppercase">відгуки <span class="bold">учасників</span></h1><br>
                 <!-- <div class="grid-x  grid-padding-x small-up-1 large-up-2" data-equalizer data-equalize-on="large" data-equalize-by-row="true"> -->
                 <div class="grid-x  grid-padding-x small-up-1 large-up-2">
-                    <div class="cell" ng-repeat="quote in feedbacks">
+                    <div class="cell" ng-repeat="quote in data.feedbacks">
                         <!-- <div class="card white-bg" data-equalizer-watch> -->
                         <div class="card white-bg">
                             <div class="grid-x">
@@ -225,7 +225,7 @@
         </footer></div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-route.js"></script>
-    <script src="assets/js_plugins/myAngular.js"></script>
+    <script src="assets/js_plugins/myAngularSK.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.js"></script>
     <script src="assets/js_plugins/owl.carousel.min.js"></script>
