--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="cell">
                         <br>
                         <h4 class="text-center white bold uppercase">{[{prog.name}]}</h4>
-                        <img src="assets/img/programs/{[{prog.ID}]}.png" loading="lazy">
+                        <img style="min-width: 100%;" src="assets/img/programs/{[{prog.ID}]}.png" loading="lazy">
                     </div>
                     <div class="cell prog-features ">
                         <h6 class="text-center uppercase">дистанція: <span class="s-bold ">{[{prog.distance}]}</span></h6>
