--- a/kyiv.html
+++ b/kyiv.html
@@ -106,7 +106,7 @@
         </div>
         <br>
         <h1 class="text-center white uppercase">наші <span class="bold">програми</span></h1><br>
-        <div class="grid-x  grid-padding-x grid-padding-y small-up-1 medium-up-2 large-up-3" data-equalizer data-equalize-on="medium" data-equalize-by-row="true">
+        <div class="grid-x  grid-padding-x grid-padding-y small-up-1 medium-up-2 large-up-3 xlarge-up-4" data-equalizer data-equalize-on="medium" data-equalize-by-row="true">
             <div class="cell " ng-repeat="prog in data.programs" data-equalizer-watch>
                 <div class="grid-x dark-024-bgrd" style="height: 100%">
                     <div class="cell">
