--- a/index.html
+++ b/index.html
@@ -141,13 +141,12 @@
                                 <h6 class="text-center swim-2 uppercase s-bold">Тренування:</h6>
                                 <p class=" swim-2">
                                     {[{data.trainPlace}]},
-                                    <span class="s-bold">{[{data.trainTime}]}</span> ранку
-                                    <br><span class="s-bold">{[{data.trainDays1}]}</span>
-                                    або <span class="s-bold">{[{data.trainDays2}]}</span> на вибір</p>
+                                    <br><span class="s-bold">{[{data.trainDays1}]}</span> о <span class="s-bold">{[{data.trainTime}]}</span><br>
+                                    або <span class="s-bold">{[{data.trainDays2}]}</span> о <span class="s-bold">{[{data.trainTime2}]}</span></p>
                                 <br>
-                                <ul>
-                                    <li class="swim-1 include-list" ng-repeat="x in prog.descr">{[{ x }]}</li>
-                                </ul>
+                               
+                                    <p class="swim-1 big bold include-pst" >{[{prog.footnote}]}</p>
+                                
                                 <br>
                                 <div class="text-center">
                                     <h5 class="swim-2 s-bold">хочу на безкоштовне пробне тренування:</h5>
@@ -181,6 +180,7 @@
             		<img class="owl-lazy" style="width: auto;" src="assets/img/partners/07.svg">
             		<img class="owl-lazy" style="width: auto;" src="assets/img/partners/08.svg">
             		<img class="owl-lazy" style="width: auto;" src="assets/img/partners/09.svg">
+            		<img class="owl-lazy" style="width: auto;" src="assets/img/partners/10.png">
             	</div><br><br>
         </div>
         <div class="grid-container">
