content update, added fb chat lviv

--- a/kyiv.html
+++ b/kyiv.html
@@ -136,7 +136,7 @@
                             <div class="accordion-content white-bg" style="position: absolute; z-index: 100" data-tab-content>
                                 <h5 class="text-center swim-2 uppercase s-bold">В ціну включено:</h5>
                                 <ol>
-                                    <li class="swim-1 include-list" ng-repeat="x in data.include">{[{ x }]}</li>
+                                    <li class="swim-1 include-list" ng-repeat="x in prog.include">{[{ x }]}</li>
                                 </ol><br>
                                 <h6 class="text-center swim-2 uppercase s-bold">Тренування:</h6>
                                 <p class="swim-2">{[{data.trainPlace}]},
