--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@
     <!-- Your customer chat code -->
     <div class="fb-customerchat"
     attribution=install_email
-    page_id="102115014606778"
+    page_id="740332622818164"
+      theme_color="#20cef5"
     logged_in_greeting="Привіт! Скоріш за все ми зараз тренуємося, але як тільки дістанемося до комп'ютера - одразу вам відповімо)"
     logged_out_greeting="Привіт! Скоріш за все ми зараз тренуємося, але як тільки дістанемося до комп'ютера - одразу вам відповімо)">
     </div>
