--- a/kyiv.html
+++ b/kyiv.html
@@ -16,7 +16,24 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swim 4U Київ | set your goal &amp; swim it</title>
-    <!-- <title>Swim4U | set your goal & swim it</title> -->
+    <meta name="description" content="Swim4U — це клуб, де ми навчимо тебе плавати. А, ти вже вмієш? Тоді їдемо перепливати Босфор. Повір, це можливо. Ми підготуємось до цієї пригоди разом!">
+    <!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '175145107145001');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=175145107145001&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
     <meta property="og:title" content="Swim 4U Київ | set your goal &amp; swim it" />
     <meta property="og:description" content="Ми спортсмени-аматори, подорожуємо по світу, долаючи кілометри біжучи, пливучи та крутячи педалі. " />
     <meta property="og:image" content="https://shuandr.github.io/Swim4U/OG_img-swim.jpg">
