rearrange contacts block

--- a/kyiv.html
+++ b/kyiv.html
@@ -56,14 +56,14 @@
         <div class="swim-ptrn fixed-bg"></div>
         <div class="hero">
             <div class="grid-x social-icons">
-                <div class="cell medium-auto ">
+                <div class="cell small-5 medium-auto ">
                     <a href="https://www.facebook.com/SwimForUKyiv" target="_blank">
                         <i class="fa fa-facebook-square fa-2x"></i></a>
                     <a href="https://www.instagram.com/swim4u_" target="_blank">
                         <i class="fa fa-instagram fa-2x"></i></a>
-                    <a href="index.html" class=" button small white-bg swim-1 s-bold" style="margin-bottom: 0.4rem">Swim4U Львів</a>
+                    <a href="index.html" class=" button small white-bg swim-1 s-bold" style="margin: 0.6rem 0 0.4rem">Swim4U Львів</a>
                 </div>
-                <div class="cell medium-shrink main-tel text-right">
+                <div class="cell small-7 medium-shrink main-tel text-right">
                     <a class="white" href="tel://+380636710994"><i class="fa fa-phone-square fa-2x" style="transform: translateY(0.4rem); "></i> 063-671-09-94</a>
                 </div>
             </div>
