--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <div class="swim-ptrn fixed-bg"></div>
         <div class="hero">
             <div class="grid-x social-icons">
-                <div class="cell medium-auto ">
+                <div class="cell small-5 medium-auto ">
                     <a href="https://www.facebook.com/{[{data.fb}]}" target="_blank">
                         <i class="fa fa-facebook-square fa-2x"></i></a>
                     <a href="https://www.instagram.com/{[{data.insta}]}" target="_blank">
                         <i class="fa fa-instagram fa-2x"></i></a>
-                    <a href="kyiv.html" class=" button small white-bg swim-1 s-bold" style="margin-bottom: 0.4rem">Swim4U Київ</a>
+                    <a href="kyiv.html" class=" button small white-bg swim-1 s-bold" style="margin:0.6rem 0 0.4rem ">Swim4U Київ</a>
                 </div>
-                <div class="cell medium-shrink main-tel text-right">
+                <div class="cell small-7 medium-shrink main-tel text-right">
                     <a class="white" href="tel://{[{data.tel}]}"><i class="fa fa-phone-square fa-2x" style="transform: translateY(0.4rem); "></i> {[{data.telView}]}</a>
                 </div>
             </div>
