--- a/kyiv.html
+++ b/kyiv.html
@@ -34,11 +34,11 @@
   src="https://www.facebook.com/tr?id=175145107145001&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
+    <meta property="og:image" content="https://swim4u.club/OG_img-swim.jpg">
+    <meta property="og:url" content="https://swim4u.club/kyiv.html" />
     <meta property="og:title" content="Swim 4U Київ | set your goal &amp; swim it" />
     <meta property="og:description" content="Ми спортсмени-аматори, подорожуємо по світу, долаючи кілометри біжучи, пливучи та крутячи педалі. " />
-    <meta property="og:image" content="https://shuandr.github.io/Swim4U/OG_img-swim.jpg">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://shuandr.github.io/Swim4U/kyiv.html" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/app.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
