--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>    <div class="section">
             <h1 class="text-center white uppercase">наші <span class="bold ">тренери</span></h1>
             <div class="grid-container trainers">
-                <div class=" grid-x  grid-padding-x small-up-1 medium-up-2 large-up-3">
+                <div class=" grid-x  grid-padding-x small-up-1 medium-up-2">
                     <div class="cell white text-center" ng-repeat="trainer in data.trainers">
                         <img src="assets/img/{[{trainer.img}]}">
                         <h4 class="bold uppercase">{[{trainer.name}]}</h4>
