--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="section">
             <h1 class="text-center white uppercase">наші <span class="bold ">тренери</span></h1>
             <div class="grid-container trainers">
-                <div class=" grid-x  grid-padding-x small-up-1 medium-up-2">
+                <div class=" grid-x  grid-padding-x small-up-1 medium-up-2 large-up-3">
                     <div class="cell white text-center" ng-repeat="trainer in data.trainers">
                         <img src="assets/img/{[{trainer.img}]}">
                         <h4 class="bold uppercase">{[{trainer.name}]}</h4>
@@ -105,14 +105,19 @@
                 <div class="grid-x  grid-padding-x">
                     <div class="cell large-6 text-center">
                         <p class="swim-1 s-bold big">{[{data.progIntro.intro}]}</p>
-                        <table class="big swim-1 prog-tbl">
-                            <tr>
-                                <td ng-repeat="prog in data.progIntro.prices">{[{prog.dur}]}<br>
-                                    <span class="bold swim-2 bigger">{[{prog.prc}]}</span> грн<br>
-                                    <span class="bold swim-1 ">{[{prog.prc1}]} </span>
-                                    <span class="sml-txt swim-1 ">грн/тренування</span></td>
-                            </tr>
-                        </table>
+                        <div class="grid-x small-up-2 medium-up-4 big swim-1">
+                            <div class="cell" ng-repeat="prog in data.progIntro.prices">
+                                <div style="border: 1px solid #00a896; border-radius: 6px; padding: 0.6rem 0.4rem 1rem; margin: 0.3rem;">
+                                    {[{prog.dur}]}<br>
+                                    <span class="bold swim-2 bigger">{[{prog.prc}]}</span><br>грн
+                                    <hr style="border-color: #00a896; margin: 0.6rem auto;">
+                                    <p class="swim-1" style="line-height: 0.9rem;">
+                                        <span class="bold ">{[{prog.prc1}]}</span><br>
+                                        <span class="sml-txt">грн/тренування</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div><br>
                         <h5 class=" swim-2 uppercase s-bold">розклад тренувань:</h5>
                         <p class=" swim-1">
                             {[{data.trainPlace}]},
