remove Kyiv, edit programs

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="swim-ptrn fixed-bg"></div>
         <div class="hero">
             <div class="grid-x social-icons">
-                <div class="cell small-7 medium-shrink ">
+                <div class="cell">
                     <a href="https://www.facebook.com/{[{data.fb}]}" target="_blank">
                         <i class="fa fa-facebook-square fa-2x"></i></a>
                     <a href="https://www.instagram.com/{[{data.insta}]}" target="_blank">
@@ -69,13 +69,10 @@
                         <i class="fa fa-phone-square fa-2x"></i>
                         <span class="hide-for-small-only"> {[{data.telView}]}</span> </a>
                 </div>
-                <div class="cell small-5 medium-auto text-right">
-                    <a href="{[{data.otherCityHref}]}" class=" button small white-bg swim-1 s-bold">{[{data.otherCityBtn}]}</a>
-                </div>
+                
             </div>
             <div class="grid-x ">
                 <div class="cell text-center " style="margin-top: 0.6rem;">
-                    <h2 class="text-center white uppercase">{[{data.city}]}</h2>
                     <img class="logo main" src="assets/img/swim-4U_logo.svg" alt="">
                 </div>
             </div>
@@ -167,6 +164,8 @@
         <div class="grid-x align-middle">
             <div class="cell medium-7 large-9">
                 <h1 class="text-center white uppercase">Подарункові <span class="bold">сертифікати <br>від 1000</span> <small class="white">грн</small></h1>
+                <p class="text-center white">*мінімальна вартість програми — 13 000 грн</p>
+
             </div>
             <div class="cell medium-5 large-3">
                 <img style="" src="assets/img/cert_S.webp" alt="">
